Updated Digital Ocean logo; fix alignments

--- a/app/assets/stylesheets/application/modules/_util.sass
+++ b/app/assets/stylesheets/application/modules/_util.sass
@@ -30,5 +30,8 @@
 .u__text-line
   display: block
 
+.u__text-center
+  text-align: center !important
+
 .u__text-right
   text-align: right !important
